@@ -1,6 +1,7 @@
 Revision history for Mojolicious::Plugin::DSC
 
 0.05  2012-08-04 14:50 EEST
+      - Added tests and example classes.
       - Added missing licence in Makefile.PL.
       - Added _load_classes() to separate logical chuncks of code..
       - Added missing Changelog.
